<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/location_permission_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_permission"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/background_permission_TV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/background_permission_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_permission"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/start_service_TV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_permission_TV" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_service_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/start_service"
        app:layout_constraintBottom_toTopOf="@+id/stop_service_TV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_permission_TV" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop_service_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_service_TV" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/title_text"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toTopOf="@+id/location_permission_TV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />
</androidx.constraintlayout.widget.ConstraintLayout>